--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ social: true
 footer: true
 ---
 
-    <div class="homepage main js-main">
+    <div class="homepage">
         <div class="row">
             <h1>Open source cloud software<br>Free, scalable, production ready</h1>
     	    <ul class="circles">
