Remove demo/try it out references and links

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@ footer: true
         <div class="row">
             <h1>Open source cloud software<br>Free, scalable, production ready</h1>
     	    <ul class="circles">
-                <li><a href="https://accounts.demo.synnefo.org/ui/login" target="_blank">try it out</a></li>
-                <li><a href="http://www.synnefo.org/redirect/livecd.iso" title="Synnefo live CD">download live cd</a></li>
+                <li><a href="{{ '/about' | prepend: site.baseurl }}" title="About">ABOUT</a></li>
                 <li><a href="{{ '/screenshots' | prepend: site.baseurl }}" title="View Synnefo screenshots and Videos">SCREENSHOTS & VIDEOS</a></li>
+                <li><a href="{{ '/blog' | prepend: site.baseurl }}" title="Blog">BLOG</a></li>
             </ul>
-        </div>	
+        </div>
 	</div>
 
 
